// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskTile should match the snapshot for grouped task 1`] = `
<DocumentFragment>
  <div
    class="tile-parent-container"
  >
    <div
      class="nursing-tasks-tile false
        "
    >
      <div
        class="tile-content"
      >
        <div
          class="tile-title"
        >
          <div
            class="tile-title undefined"
          >
            <div>
              <div
                class="nursing-task-icon-container"
                data-testid="Pending"
              >
                <div>
                  <test-file-stub />
                </div>
              </div>
              <span
                class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--bottom cursor-pointer"
              >
                <button
                  aria-controls="id-_r_3_"
                  aria-describedby="id-_r_3_"
                  aria-expanded="false"
                  class="cds--definition-term"
                  type="button"
                >
                  <span
                    class="drug-title"
                    style="color: rgb(82, 82, 82); font-weight: 400;"
                  >
                    TASK_LABEL_MEDICATION
                  </span>
                </button>
                <span
                  class="cds--popover"
                  id="id-_r_3_"
                >
                  <span
                    class="cds--popover-content cds--definition-tooltip"
                  />
                  <span
                    class="cds--popover-caret"
                  />
                </span>
              </span>
            </div>
          </div>
          <div
            class="cds--tag cds--tag--sm cds--layout--size-sm cds--tag--blue"
            id="tag-id-_r_5_"
          >
            <span
              class="cds--tag__label"
              dir="auto"
              title="Rx"
            >
              Rx
            </span>
          </div>
        </div>
        <div
          class="tile-content-subtext"
          style="color: rgb(82, 82, 82);"
        >
          <span />
        </div>
        <div
          class="tile-content-footer"
        >
          <div
            class="tile-date-time"
          >
            <div
              class="date-time-container"
            >
              <div
                class="date-row"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20 V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                  />
                </svg>
                <span
                  class="tile-content-subtext-date"
                >
                   Invalid date
                </span>
              </div>
              <div
                class="time-row"
              >
                <test-file-stub />
                <div
                  class="tile-content-subtext-time"
                >
                   Invalid date
                </div>
              </div>
            </div>
          </div>
          <div
            class="footer-right-section"
          >
            <span
              class="grouped-task-count"
            >
              (1 more task(s))
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="nursing-tasks-tile stacked-tile false"
    />
  </div>
</DocumentFragment>
`;

exports[`TaskTile should match the snapshot for non grouped task 1`] = `
<DocumentFragment>
  <div
    class="tile-parent-container"
  >
    <div
      class="nursing-tasks-tile false
        disabled-tile"
    >
      <div
        class="tile-content"
      >
        <div
          class="tile-title"
        >
          <div
            class="tile-title undefined"
          >
            <div>
              <div
                class="nursing-task-icon-container"
                data-testid="Administered"
              >
                <div>
                  <test-file-stub />
                </div>
              </div>
              <span
                class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--bottom cursor-not-allowed"
              >
                <button
                  aria-controls="id-_r_0_"
                  aria-describedby="id-_r_0_"
                  aria-expanded="false"
                  class="cds--definition-term"
                  type="button"
                >
                  <span
                    class="drug-title"
                    style="color: rgb(82, 82, 82); font-weight: 400;"
                  >
                    Halothane/Fluothane 250 mL Inhalation Anesthetic Liquid
                  </span>
                </button>
                <span
                  class="cds--popover"
                  id="id-_r_0_"
                >
                  <span
                    class="cds--popover-content cds--definition-tooltip"
                  >
                    Halothane/Fluothane 250 mL Inhalation Anesthetic Liquid
                  </span>
                  <span
                    class="cds--popover-caret"
                  />
                </span>
              </span>
            </div>
          </div>
          <div
            class="cds--tag cds--tag--sm cds--layout--size-sm cds--tag--blue"
            id="tag-id-_r_2_"
          >
            <span
              class="cds--tag__label"
              dir="auto"
              title="Rx"
            >
              Rx
            </span>
          </div>
        </div>
        <div
          class="tile-content-subtext"
          style="color: rgb(82, 82, 82);"
        >
          <span>
            1ml
          </span>
          <span>
             - Oral
          </span>
        </div>
        <div
          class="tile-content-footer"
        >
          <div
            class="tile-date-time"
          >
            <div
              class="date-time-container"
            >
              <div
                class="date-row"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20 V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                  />
                </svg>
                <span
                  class="tile-content-subtext-date"
                >
                   26 December 2023
                </span>
              </div>
              <div
                class="time-row"
              >
                <test-file-stub />
                <div
                  class="tile-content-subtext-time"
                >
                   16:00 - 07:23 (actual)
                </div>
              </div>
            </div>
          </div>
          <div
            class="footer-right-section"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
